--- a/package.json
+++ b/package.json
@@ -1,21 +1,50 @@
 {
   "name": "medicamento_expo",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "^6.3.2",
+    "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/push-notification-ios": "^1.10.1",
+    "@react-navigation/native": "^5.0.0",
+    "@react-navigation/stack": "^5.0.0",
     "expo": "~46.0.9",
+    "expo-alarm-module": "^1.0.8",
+    "expo-datepicker": "^1.0.21",
+    "expo-device": "^4.3.0",
+    "expo-notifications": "^0.16.1",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-dom": "18.0.0",
+    "react-native": "0.69.5",
+    "react-native-alarm-module": "^3.0.0",
+    "react-native-date-picker": "^4.2.5",
+    "react-native-gesture-handler": "^2.6.0",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.7.2",
+    "react-native-screens": "^2.0.0-beta.2",
+    "react-native-simple-alarm": "^2.0.2",
+    "react-native-web": "~0.18.7",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.6.2",
+    "babel-jest": "^24.9.0",
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.56.0",
+    "react-test-renderer": "16.9.0"
+  },
+  "jest": {
+    "preset": "react-native"
   },
   "private": true
 }
