--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.0.0",
     "expo": "~46.0.9",
     "expo-alarm-module": "^1.0.8",
+    "expo-calendar": "^10.3.0",
     "expo-datepicker": "^1.0.21",
     "expo-device": "^4.3.0",
     "expo-notifications": "^0.16.1",
